--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: index.html
     - text: "lab12"
       href: lab12.html
+    - text: "assignment 5"
+      href: HW5.html
   right:
     - icon: fa-github fa-lg
       href: https://github.com/USCbiostats/PM566
